Address feedback and attempt to shutup modlauncher logging